# bits-solid-course

./: CMakeLists.txt
Session1_Assignment/: .gitignore
Session1_Assignment/Task_One/: book.h
Session1_Assignment/Task_Three/: library_system  library_system.cpp
Session1_Assignment/Task_Two/: library_member.h  student_member.h
Session2_Assignment/Task_One/: bike.h  car.h  i_vehicle.h  main  main.cpp
Session2_Assignment/Task_Two_AND_Three/: developer.h  employee.h  main.cpp  manager.h
Session3_Assignment/Task_One/: mian  mian.cpp
Session3_Assignment/Task_One/1/: inStoreOrder.h  mian.cpp  onlineOrder.h  telephoneOrder.h
Session3_Assignment/Task_One/1/factory/: concreteInStoreOrder.h  concreteOnlineOrder.h  concreteTelephoneOrder.h  orderFactory.h
Session3_Assignment/Task_One/1/order/: inStoreOrder.h  order.h
Session3_Assignment/Task_One/factory/: concreteInStoreOrder.h
Session3_Assignment/Task_One/logger/: logger.h
Session3_Assignment/Task_One/order/: onlineOrder.h  telephoneOrder.h
Session3_Assignment/Task_Three/: TestTaskThree.java
Session3_Assignment/Task_Three/notifications/: EmailNotification.java  PushNotification.java  SMSNotification.java
Session3_Assignment/Task_Three/notifications/decorator/: NotificationDecorator.java  NotifierSystem.java
Session3_Assignment/Task_Three/observer/: EmailNotificationObserver.java  PushNotificationObserver.java  SMSNotificationObserver.java  User.java
Session3_Assignment/Task_Three/strategy/: EmailStrategy.java  NotificationContext.java  NotificationStrategy.java  PushStrategy.java  SMSStrategy.java
Session3_Assignment/Task_Two/: computer.h  computerAdapter.h  computerBuilder.h  main  main.cpp  thirdPartyApiComputer.h
assignment-one/: .gitignore
assignment-one/Task One/: book.h  main.cpp  tempCodeRunnerFile.cpp
